--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'org.apache.directory.studio:org.apache.commons.io:2.4'
+    compile 'com.balysv:material-ripple:1.0.2'
+
 }
