--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,17 +8,17 @@ android {
         applicationId "project.proyectointegradoraquelgutierrez"
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 2
-        versionName "1.2"
+        versionCode 4
+        versionName "1.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            debug {
-                debuggable false
-            }
+            //debug {
+            //    debuggable false
+            //}
         }
     }
     productFlavors {
