--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="project.proyectointegradoraquelgutierrez">
 
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" android:required="false" />
+    <uses-permission android:name="android.permission.INTERNET" android:required="false"  />
+    <!--<uses-feature android:name="android.hardware.Sensor" android:required="true"/>
+    <uses-feature android:name="android.hardware.SensorEvent" android:required="true"/>
+    <uses-feature android:name="android.hardware.SensorListener" android:required="true"/>-->
+    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" />
+    <uses-feature android:name="android.net.ConnectivityManager" android:required="false"/>
+    <uses-sdk android:minSdkVersion="16"/>
+
+    <supports-screens
+        android:smallScreens="true"
+        android:anyDensity="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:largeScreens="true"
+        />
 
     <application
         android:allowBackup="true"
@@ -31,5 +45,4 @@
             android:label=""
             android:theme="@style/NoActionBar"/>
     </application>
-
 </manifest>
